DRA-1700-løs-kobling: Første refaktorering for at adskille ds-storage i api og web.

--- a/ds-discover-api/src/main/templates/api.mustache
+++ b/ds-discover-api/src/main/templates/api.mustache
@@ -23,7 +23,7 @@ import io.swagger.annotations.ApiParam;
 import io.swagger.annotations.ApiResponses;
 import io.swagger.annotations.ApiResponse;
 import io.swagger.jaxrs.PATCH;
-import {{packageName}}.webservice.KBAuthorization;
+import dk.kb.ds.shared.oauth.KBAuthorization;
 import io.swagger.annotations.AuthorizationScope;
 {{#useBeanValidation}}
 import javax.validation.constraints.*;
